--- a/src/Vista/RegistrarEmpleado.form
+++ b/src/Vista/RegistrarEmpleado.form
@@ -294,7 +294,7 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
-                <StringItem index="0" value="Seleccione una opci&#xf3;n"/>
+                <StringItem index="0" value="Selecciona una opci&#xf3;n"/>
                 <StringItem index="1" value="Cajero"/>
                 <StringItem index="2" value="Gerente"/>
               </StringArray>
